# UTD-College-CS-Coursework

./: README.md
CS_6320/assignment_2/: .gitattributes  .gitignore  README.md  data_and_embedding.7z  ffnn.ipynb  ffnn.py  pyproject.toml  rnn.ipynb
CS_6350/assignment_3/: .gitignore  pyproject.toml
CS_6350/assignment_3/part1/: .gitignore  README.md  logstash.conf  pyproject.toml  requirements.txt
CS_6350/assignment_3/part1/src/: config.env  newsapi.py  streamer.py
CS_6350/assignment_3/part2/: README.md  brief_analysis.txt  graph.py
CS_6350/assignment_3/part2/outputs/in_degrees.csv/: .part-00000-a519264a-9a27-4b76-a7c0-f751919dde95-c000.csv.crc  part-00000-a519264a-9a27-4b76-a7c0-f751919dde95-c000.csv
CS_6350/assignment_3/part2/outputs/largest_components.csv/: .part-00000-220c86d4-6cea-4b4b-a717-27106f80c470-c000.csv.crc  part-00000-220c86d4-6cea-4b4b-a717-27106f80c470-c000.csv
CS_6350/assignment_3/part2/outputs/out_degrees.csv/: .part-00000-1a63cef5-ed61-4c2d-bfd9-7218e1b65148-c000.csv.crc  part-00000-1a63cef5-ed61-4c2d-bfd9-7218e1b65148-c000.csv
CS_6350/assignment_3/part2/outputs/page_rank.csv/: .part-00000-b0689b95-e165-4613-bb9d-5af83ddf6241-c000.csv.crc  part-00000-b0689b95-e165-4613-bb9d-5af83ddf6241-c000.csv
CS_6350/assignment_3/part2/outputs/triangle_counts.csv/: .part-00000-1c8c6d4d-5bf7-4a82-ae1b-d75bd63885f8-c000.csv.crc  part-00000-1c8c6d4d-5bf7-4a82-ae1b-d75bd63885f8-c000.csv
CS_6375/: pyproject.toml
CS_6375/assignment1/: logistic_regression.py  my_logistic_regression.py  pyproject.toml
CS_6375/assignment2/: decision_tree.py
CS_6375/assignment2/images/: monk1_decision_tree
CS_6375/assignment3/: naive_bayes.py
CS_6375/assignment4/: ensemble_base.py
CS_6375/assignment4/data/: monks-2.test  monks-2.train  monks-3.test  monks-3.train
CS_6375/assignment5/: grading.py  qlearningAgents.py  valueIterationAgents.py
CS_6375/assignment5/test_cases/q8/: 1-tinygrid.test_output  3-bridge.test_output  4-discountgrid.test_output  5-coord-extractor.test_output
(+374 files in other folders)
