[project]
name = ""
version = ""
description = ""
authors = [
    {name = "spenpal", email = "spenpal2000@gmail.com"},
]
dependencies = [
    "numpy>=1.24.2",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.2.1",
    "graphviz>=0.20.1",
    "pandas>=1.5.3",
    "nltk>=3.8.1",
]
requires-python = ">=3.10"
license = {text = "None"}

[tool.pdm]
