[project]
name = ""
version = ""
description = ""
authors = [
    {name = "spenpal",email = "spenpal2000@gmail.com"},
]
dependencies = [
    "numpy>=1.24.4",
    "torch>=2.1.0",
    "tqdm>=4.66.1",
    "setuptools>=68.2.2",
    "ipykernel>=6.26.0",
    "matplotlib>=3.7.3",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "None"}

