[project]
name = ""
version = ""
description = ""
authors = [
    {name = "spenpal",email = "spenpal2000@gmail.com"},
]
dependencies = [
    "ipykernel>=6.26.0",
    "setuptools>=68.2.2",
    "tqdm>=4.66.1",
    "matplotlib>=3.8.2",
    "torch>=2.1.1",
    "numpy>=1.26.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "None"}

