[project]
name = ""
version = ""
description = ""
authors = [
    {name = "spenpal",email = "spenpal2000@gmail.com"},
]
dependencies = [
    "kafka-python>=2.0.2",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "spacy>=3.7.2",
    "pyspark>=3.5.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "None"}

